--- a/Tutorials/Intro_to_GANs.ipynb
+++ b/Tutorials/Intro_to_GANs.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPxxETotJQQLbJx48iT9d69",
+      "authorship_tag": "ABX9TyOor/okUi5adDB5Fcmi/slF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -420,7 +419,7 @@
         "id": "AvBf_Y4dSt3O",
         "outputId": "766b709a-329a-4748-bac0-909d0a31c9f8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +492,7 @@
       "metadata": {
         "id": "myVc8HiCSwDB"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -546,7 +545,7 @@
       "metadata": {
         "id": "FM_smFQ-Tr0D"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -589,7 +588,7 @@
       "metadata": {
         "id": "Ct_oJuaCTlJb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +609,7 @@
         "id": "YDgkILIbYIin",
         "outputId": "25b36562-f789-432b-97dc-8efab64268a1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,7 +697,7 @@
       "metadata": {
         "id": "gUl72106YdSH"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +716,7 @@
         "id": "h3U7tTgFvg4h",
         "outputId": "63d5ab95-cdbf-4fc9-8b98-d050776d4ac8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +806,7 @@
       "metadata": {
         "id": "Vekde7SAlEPW"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -922,7 +921,7 @@
       "metadata": {
         "id": "mF4CuoeJQXdt"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -938,7 +937,7 @@
         "id": "4af_0BZaYFaQ",
         "outputId": "726963c4-f8a9-4cbf-c137-1166364123e8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -963,7 +962,7 @@
         "id": "_AlRaSHumde8",
         "outputId": "f9c8ac33-2812-43b2-f0ed-e3ea5fabdc1e"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1018,7 +1017,7 @@
         "id": "30l0LwJDtQeT",
         "outputId": "7f435d14-2d9b-4412-ae98-900b91cbd05b"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1043,7 +1042,7 @@
       "metadata": {
         "id": "Qh9-SOQHUYuV"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1061,7 +1060,7 @@
         "id": "WGDwGSDqVWsu",
         "outputId": "545e7240-659f-46c4-9584-5edbd936fd03"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1113,7 @@
         "id": "izOPABNnn1kr",
         "outputId": "071e8e9f-5814-4ac3-86d0-6c820dbfa4b7"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1513,13 +1512,18 @@
       "metadata": {
         "id": "QUF6aOyFoj1o"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "It's interesting to observe how the generator loss is increasing with training. Ideally it should be decreasing -> Potentially explaisn why the images don't look as good as intended."
+        "It's interesting to observe how the generator loss is increasing with training. Ideally it should be decreasing -> Potentially explains why the images don't look as go.\n",
+        "\n",
+        "This is actually a correct phenomenon explained [here](https://datascience.stackexchange.com/questions/47875/why-is-my-generator-loss-function-increasing-with-iterations)\n",
+        "- The idea is that the loss function used when training the discriminator is actually checking how well the discriminator is able to distinguish the fake images\n",
+        "- If the loss is high -> Then generator is able to fool the discriminator which is what we want from the model\n",
+        "\n"
       ],
       "metadata": {
         "id": "YK4_J54CnNG9"
@@ -1548,7 +1552,7 @@
         "id": "sQoLukJvmSgu",
         "outputId": "8e08ecbf-cad2-4e43-c687-518fe6ceeb5b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
